--- a/publications.html
+++ b/publications.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title : Research
-navbar_title: research
+navbar_title: Research
 body_attr: >-
   data-spy="scroll" data-target="#navbar-year" data-offset="100"
 ---
