--- a/showcase.html
+++ b/showcase.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title : Showcase
-navbar_title: Showcase
+title : Teaching
+navbar_title: Teaching
 container_class: container-xl
 ---
 
