--- a/showcase.html
+++ b/showcase.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title : Teaching
-navbar_title: Teaching
+title : Showcase
+navbar_title: showcase
 container_class: container-xl
 ---
 
