research and teaching section

--- a/teaching.html
+++ b/teaching.html
@@ -1,15 +1,28 @@
 ---
-layout: default
-title : Teaching
-navbar_title: teaching
-container_class: container-xl
+layout: page
+title: Teaching
+navbar_title: Teaching
+description: Courses and teaching philosophy of Jaewook Lee
 ---
 
-This is a test. 
+<section class="teaching-page">
+  <div class="page-intro">
+    <h1>Teaching</h1>
+    <p>
+      I have two main objectives for students’ learning experiences: to provide fundamental knowledge and critical thinking tools applicable to students’ future careers in various academic and non-academic fields; to facilitate the appreciation for complex, big-picture issues inherent in processes of politics. My approach actualizes these objectives by creating a dedicated and engaged learning environment where I actively facilitate my students’ learning and engagement with politics. Through the courses, I expect students to enhance critical self-awareness and understanding of politics that impact individuals and the world.
+    </p>
+  </div>
 
-I want to see if this works well.
+  <hr>
 
-<details>
-    <summary>Try Toggle Switch</summary>
-    See if this works!
-</details>
+  <div class="courses">
+    <h2>Courses Offered</h2>
+    <ul>
+      <li>Comparative Political Economy</li>
+      <li>International Political Economy</li>
+      <li>Political Economy of Inequality</li>
+      <li>Political Economy of Structural Economic Transformations</li>
+    </ul>
+    <p><em>Syllabi and further information are available upon request.</em></p>
+  </div>
+</section>
