--- a/research.html
+++ b/research.html
@@ -2,8 +2,24 @@
 layout: page
 title: Research
 navbar_title: Research
-description: Research overview and working papers of Jaewook Lee
+description: Research overview of Jaewook Lee
 ---
+
+<style>
+  .research-page h3 {
+    font-size: 1.2em;
+    margin-bottom: 0.3em;
+  }
+  .research-page article.paper {
+    line-height: 1.6;
+    margin-bottom: 2.5em;
+  }
+  .research-page details summary {
+    cursor: pointer;
+    font-weight: 600;
+    margin-top: 0.5em;
+  }
+</style>
 
 <section class="research-page">
   <div class="page-intro">
@@ -12,7 +28,7 @@ description: Research overview and working papers of Jaewook Lee
       How do structural transformations in advanced capitalist economies affect the political demands of individuals and interest groups? My research examines the intricate relationship among occupation, social identity, and political preferences in governing macro-societal transformations like globalization, automation, and climate change.
     </p>
     <p>
-      For my dissertation project, I focus on labor migration and automation in Western Europe, which bring economic benefits and job-displacing concerns. The project examines how both double-edged transformations affect public support for social welfare policies, exploring public opinion and politics among business associations, labor unions, and political parties.
+      For my [dissertation project](https://drive.google.com/file/d/1M9GjaSdlSPkisyf1kUeDtkekGKHu3q-F/view), I focus on labor migration and automation in Western Europe, which bring economic benefits and job-displacing concerns. The project examines how both double-edged transformations affect public support for social welfare policies, exploring public opinion and politics among business associations, labor unions, and political parties.
     </p>
     <p>
       I emphasize the pivotal role of occupation as a micro-foundation of economic interest that shapes political choices. Additionally, I investigate how social identities (e.g., race and gender), organizational affiliations (e.g., union membership), and informational cues (e.g., educating policy implications) influence an individual’s political decisions. My research sheds light on the multifaceted nature of political decision-making processes and preferences by unraveling the dynamics between these factors and occupation, especially amidst significant societal changes.
@@ -25,7 +41,7 @@ description: Research overview and working papers of Jaewook Lee
     <h2>Working Papers</h2>
 
     <article class="paper">
-      <h3>Saving His Job, Not Hers: Selective Protection in Automation-Driven Job Loss <small>(with Soohyun Cho)</small></h3>
+      <h3>Saving His Job, Not Hers: Selective Protection in Automation-Driven Job Loss <small>(Soohyun Cho and Jaewook Lee)</small></h3>
       <details>
         <summary>Abstract</summary>
         <p>Recent advances in automation have raised concerns about job displacement and increased interest in social protection policies. However, public support for such measures is not uniformly distributed across cases of job loss. This study argues that gender norms, rather than economic vulnerability alone, explain support for social protection in response to automation-driven layoffs. Using a survey experiment in South Korea, we show that automation-driven job loss increases support for an ex-ante protective measure (e.g., Automation Tax) only when male workers are affected. This selective protection reflects the male-breadwinner model, which views male labor as more essential to household income and male job loss as more socially disruptive. The disparity in social policy preferences by laid-off’s gender profile is pronounced among individuals who hold sexist attitudes. Our findings reveal how gendered beliefs about labor value shape social protection preferences, highlighting identity-based biases in responses to economic change.</p>
@@ -33,7 +49,7 @@ description: Research overview and working papers of Jaewook Lee
     </article>
 
     <article class="paper">
-      <h3>Green Backlash or Distributive Discontent? Welfare State Satisfaction and Public Support for Carbon Taxation <small>(with Marcello Natili)</small></h3>
+      <h3>Green Backlash or Distributive Discontent? Welfare State Satisfaction and Public Support for Carbon Taxation <small>(Jaewook Lee and Marcello Natili)</small></h3>
       <details>
         <summary>Abstract</summary>
         <p>The climate crisis is an urgent challenge, yet public support for fossil fuel taxation remains low. Existing research highlights how material interests, such as concerns about the regressive nature of consumption taxes like fuel taxes, contribute significantly to this limited support. This perspective aligns with the literature on the emerging ‘eco-social divide,’ which highlights tensions between environmental and equity concerns, yet potential synergies remain understudied. While social policies may ease resistance by protecting displaced workers, we know little about whether they actually do. We examine what drives public support for a fossil fuel tax designed to reduce carbon emissions but likely to displace workers, focusing on the mediating role of the welfare state. Drawing on original survey data from the ‘Eco-Social’ UniMi project (10,500 respondents across seven European countries), we find that income anxiety and dissatisfaction with national social policies significantly reduce support for fossil fuel taxation. Moreover, individuals facing high employment risk are less supportive of carbon taxation when dissatisfied with social policies, but their support increases as satisfaction with the welfare state improves. These findings suggest that confidence in the welfare state can offset economic concerns driving opposition to climate policy, thereby easing the ‘green backlash.’</p>
@@ -41,7 +57,7 @@ description: Research overview and working papers of Jaewook Lee
     </article>
 
     <article class="paper">
-      <h3>Teaching Machines to Read Occupations: Introducing the OPUS Dataset of Occupational Partisanship <small>(with Scott Patterson and Krzysztof Pelc)</small></h3>
+      <h3>Teaching Machines to Read Occupations: Introducing the OPUS Dataset of Occupational Partisanship <small>(Scott Patterson, Krzysztof Pelc, and Jaewook Lee)</small></h3>
       <details>
         <summary>Abstract</summary>
         <p>Many of the richest social data come as open-ended, write-in responses. Occupational data are a prime example, yet the difficulty of coding such free-text entries has long limited research. We address this challenge by fine-tuning a large language model (LLM) to classify millions of write-in occupation fields into a standardized taxonomy. Treating classification as a text-generation task, we supplement standard occupational descriptions with a large corpus of alternative job titles, generating synthetic data for infrequent occupations. The resulting classifier matches or exceeds the accuracy of the US government’s benchmark tool, especially in the long tail of rare occupations. We use this method to construct the Occupational Partisanship in the United States (OPUS) dataset, which assigns partisan scores to nearly all occupations in the O*NET standard classification. Two findings illustrate its potential: (i) occupation predicts partisan identity as well as, or better than, county of residence; and (ii) majority-female occupations lean consistently Democratic. Our approach provides a low-cost, generalizable framework for classifying write-in data and a new empirical lens on the political structure of the American labor market.</p>
@@ -55,5 +71,18 @@ description: Research overview and working papers of Jaewook Lee
         <p>How do domestic institutions shape whether societies adjust to labour-market pressures through migration or automation, and how do these legacies influence public perceptions of such change? This article advances an institutional conditioning framework linking industrial-relations structures to both elite strategies and mass attitudes toward economic transformation. Study 1 traces policy developments in the United Kingdom and Sweden (2000–2020) to show that weak unions and decentralised bargaining in the UK enabled reliance on low-cost migrant labour, whereas strong unions and coordinated bargaining in Sweden limited this dependence and fostered a tech-savvy strategy supported by retraining and social partnership. Study 2, an original survey experiment (n = 1,050), reveals that these institutional legacies extend to public opinion. Swedes perceive automation-led job loss as more legitimate and less deserving of regulation than migration-led displacement, while Britons display no comparable difference. A mechanism test further shows that Swedes’ belief in the inevitability of automation—and their view that it is less disrespectful to workers—partly explains this gap. Together, the studies demonstrate how industrial relations not only steer policy adjustment but also shape citizens’ normative frames for judging technological and demographic change, highlighting the political foundations of legitimacy in European labour-market governance.</p>
       </details>
     </article>
+  </div>
+
+  <hr>
+
+  <div class="work-in-progress">
+    <h2>Work in Progress</h2>
+    <ol reversed>
+      <li>Jaewook Lee (with Jiyeong Jeon), <em>Uncertain Returns: Automation Risk and the Politics of Social Investment</em></li>
+      <li>Jaewook Lee (with Lars van Doorn, Daniel Fernandes, and Olaf van Vliet), <em>European Competitiveness and Attitudes Towards EU Fiscal Integration</em></li>
+      <li>Jaewook Lee (with Lars van Doorn, Daniel Fernandes, and Olaf van Vliet), <em>Macroeconomic Contexts, Employment Prospects, and Support for Welfare Chauvinism</em></li>
+      <li>Jaewook Lee, <em>Computing the Climate: How AI Infrastructure Shapes Public Support for Green Policy and AI Governance</em> — <a href="https://connect.apsanet.org/centennialcenter/summer-centennial-center-research-grants/" target="_blank">Awarded APSA 2025 Centennial Center Research Grant</a></li>
+      <li>Jaewook Lee (with Scott Patterson), <em>Occupational Asymmetry in American Electoral Campaign Finance</em></li>
+    </ol>
   </div>
 </section>
