--- a/research.html
+++ b/research.html
@@ -19,6 +19,29 @@ description: Research overview of Jaewook Lee
     font-weight: 600;
     margin-top: 0.5em;
   }
+  .work-in-progress {
+    margin-top: 3em;
+    line-height: 1.6;
+  }
+  .work-in-progress h2 {
+    font-size: 1.3em;
+    margin-bottom: 1em;
+  }
+  .work-in-progress ol {
+    list-style-type: decimal;
+    margin-left: 1.5em;
+  }
+  .work-in-progress li {
+    margin-bottom: 0.8em;
+    font-size: 1em;
+  }
+  .work-in-progress a {
+    text-decoration: none;
+    color: #1a73e8;
+  }
+  .work-in-progress a:hover {
+    text-decoration: underline;
+  }
 </style>
 
 <section class="research-page">
@@ -28,7 +51,7 @@ description: Research overview of Jaewook Lee
       How do structural transformations in advanced capitalist economies affect the political demands of individuals and interest groups? My research examines the intricate relationship among occupation, social identity, and political preferences in governing macro-societal transformations like globalization, automation, and climate change.
     </p>
     <p>
-      For my [dissertation project](https://drive.google.com/file/d/1M9GjaSdlSPkisyf1kUeDtkekGKHu3q-F/view), I focus on labor migration and automation in Western Europe, which bring economic benefits and job-displacing concerns. The project examines how both double-edged transformations affect public support for social welfare policies, exploring public opinion and politics among business associations, labor unions, and political parties.
+      For my dissertation project titled *[Politics Navigating Macroeconomic Transformations: Labor Migration and Automation in Western Europe]*, I focus on labor migration and automation in Western Europe, which bring economic benefits and job-displacing concerns. The project examines how both double-edged transformations affect public support for social welfare policies, exploring public opinion and politics among business associations, labor unions, and political parties.
     </p>
     <p>
       I emphasize the pivotal role of occupation as a micro-foundation of economic interest that shapes political choices. Additionally, I investigate how social identities (e.g., race and gender), organizational affiliations (e.g., union membership), and informational cues (e.g., educating policy implications) influence an individual’s political decisions. My research sheds light on the multifaceted nature of political decision-making processes and preferences by unraveling the dynamics between these factors and occupation, especially amidst significant societal changes.
