--- a/research.html
+++ b/research.html
@@ -6,19 +6,42 @@ description: Research overview of Jaewook Lee
 ---
 
 <style>
-  /* Keep headings modest and spacing consistent across both sections */
-  .research-page h3 { font-size: 1.1em; margin-bottom: 0.4em; }
-  .research-page article.paper,
-  .work-in-progress li { line-height: 1.6; margin-bottom: 2em; }
-  .research-page details summary { cursor: pointer; font-weight: 600; margin-top: 0.5em; }
-  .working-papers h2, .work-in-progress h2 { font-size: 1.3em; margin-bottom: 1em; }
-  .work-in-progress { margin-top: 3em; }
-  .work-in-progress ol { list-style-type: decimal; margin-left: 1.5em; }
-  .work-in-progress a { text-decoration: none; }
-  .work-in-progress a:hover { text-decoration: underline; }
-
-  /* Optional: subtle separators for readability */
-  .research-page article.paper + article.paper { border-top: 1px solid #eee; padding-top: 1.5em; }
+  .research-page h3 {
+    font-size: 1.2em;
+    margin-bottom: 0.3em;
+  }
+  .research-page article.paper {
+    line-height: 1.6;
+    margin-bottom: 2.5em;
+  }
+  .research-page details summary {
+    cursor: pointer;
+    font-weight: 600;
+    margin-top: 0.5em;
+  }
+  .work-in-progress {
+    margin-top: 3em;
+    line-height: 1.6;
+  }
+  .work-in-progress h2 {
+    font-size: 1.3em;
+    margin-bottom: 1em;
+  }
+  .work-in-progress ol {
+    list-style-type: decimal;
+    margin-left: 1.5em;
+  }
+  .work-in-progress li {
+    margin-bottom: 0.8em;
+    font-size: 1em;
+  }
+  .work-in-progress a {
+    text-decoration: none;
+    color: #1a73e8;
+  }
+  .work-in-progress a:hover {
+    text-decoration: underline;
+  }
 </style>
 
 <section class="research-page">
@@ -28,7 +51,7 @@ description: Research overview of Jaewook Lee
       How do structural transformations in advanced capitalist economies affect the political demands of individuals and interest groups? My research examines the intricate relationship among occupation, social identity, and political preferences in governing macro-societal transformations like globalization, automation, and climate change.
     </p>
     <p>
-      For my dissertation project <em>Politics Navigating Macroeconomic Transformations: Labor Migration and Automation in Western Europe</em>, I focus on labor migration and automation in Western Europe, which bring economic benefits and job-displacing concerns. The project examines how both double-edged transformations affect public support for social welfare policies, exploring public opinion and politics among business associations, labor unions, and political parties.
+      For my dissertation project titled *[Politics Navigating Macroeconomic Transformations: Labor Migration and Automation in Western Europe]*, I focus on labor migration and automation in Western Europe, which bring economic benefits and job-displacing concerns. The project examines how both double-edged transformations affect public support for social welfare policies, exploring public opinion and politics among business associations, labor unions, and political parties.
     </p>
     <p>
       I emphasize the pivotal role of occupation as a micro-foundation of economic interest that shapes political choices. Additionally, I investigate how social identities (e.g., race and gender), organizational affiliations (e.g., union membership), and informational cues (e.g., educating policy implications) influence an individual’s political decisions. My research sheds light on the multifaceted nature of political decision-making processes and preferences by unraveling the dynamics between these factors and occupation, especially amidst significant societal changes.
@@ -81,7 +104,7 @@ description: Research overview of Jaewook Lee
       <li>Jaewook Lee (with Jiyeong Jeon), <em>Uncertain Returns: Automation Risk and the Politics of Social Investment</em></li>
       <li>Jaewook Lee (with Lars van Doorn, Daniel Fernandes, and Olaf van Vliet), <em>European Competitiveness and Attitudes Towards EU Fiscal Integration</em></li>
       <li>Jaewook Lee (with Lars van Doorn, Daniel Fernandes, and Olaf van Vliet), <em>Macroeconomic Contexts, Employment Prospects, and Support for Welfare Chauvinism</em></li>
-      <li>Jaewook Lee, <em>Computing the Climate: How AI Infrastructure Shapes Public Support for Green Policy and AI Governance</em> — <a href="https://connect.apsanet.org/centennialcenter/summer-centennial-center-research-grants/" target="_blank" rel="noopener">Awarded APSA 2025 Centennial Center Research Grant</a></li>
+      <li>Jaewook Lee, <em>Computing the Climate: How AI Infrastructure Shapes Public Support for Green Policy and AI Governance</em> — <a href="https://connect.apsanet.org/centennialcenter/summer-centennial-center-research-grants/" target="_blank">Awarded APSA 2025 Centennial Center Research Grant</a></li>
       <li>Jaewook Lee (with Scott Patterson), <em>Occupational Asymmetry in American Electoral Campaign Finance</em></li>
     </ol>
   </div>
