--- a/research.html
+++ b/research.html
@@ -51,7 +51,7 @@ description: Research overview of Jaewook Lee
       How do structural transformations in advanced capitalist economies affect the political demands of individuals and interest groups? My research examines the intricate relationship among occupation, social identity, and political preferences in governing macro-societal transformations like globalization, automation, and climate change.
     </p>
     <p>
-      For my dissertation project titled *[Politics Navigating Macroeconomic Transformations: Labor Migration and Automation in Western Europe]*, I focus on labor migration and automation in Western Europe, which bring economic benefits and job-displacing concerns. The project examines how both double-edged transformations affect public support for social welfare policies, exploring public opinion and politics among business associations, labor unions, and political parties.
+      For my dissertation project titled <em>Politics Navigating Macroeconomic Transformations: Labor Migration and Automation in Western Europe</em>, I focus on labor migration and automation in Western Europe, which bring economic benefits and job-displacing concerns. The project examines how both double-edged transformations affect public support for social welfare policies, exploring public opinion and politics among business associations, labor unions, and political parties.
     </p>
     <p>
       I emphasize the pivotal role of occupation as a micro-foundation of economic interest that shapes political choices. Additionally, I investigate how social identities (e.g., race and gender), organizational affiliations (e.g., union membership), and informational cues (e.g., educating policy implications) influence an individual’s political decisions. My research sheds light on the multifaceted nature of political decision-making processes and preferences by unraveling the dynamics between these factors and occupation, especially amidst significant societal changes.
@@ -100,12 +100,10 @@ description: Research overview of Jaewook Lee
 
   <div class="work-in-progress">
     <h2>Work in Progress</h2>
-    <ol reversed>
-      <li>Jaewook Lee (with Jiyeong Jeon), <em>Uncertain Returns: Automation Risk and the Politics of Social Investment</em></li>
-      <li>Jaewook Lee (with Lars van Doorn, Daniel Fernandes, and Olaf van Vliet), <em>European Competitiveness and Attitudes Towards EU Fiscal Integration</em></li>
-      <li>Jaewook Lee (with Lars van Doorn, Daniel Fernandes, and Olaf van Vliet), <em>Macroeconomic Contexts, Employment Prospects, and Support for Welfare Chauvinism</em></li>
-      <li>Jaewook Lee, <em>Computing the Climate: How AI Infrastructure Shapes Public Support for Green Policy and AI Governance</em> — <a href="https://connect.apsanet.org/centennialcenter/summer-centennial-center-research-grants/" target="_blank">Awarded APSA 2025 Centennial Center Research Grant</a></li>
-      <li>Jaewook Lee (with Scott Patterson), <em>Occupational Asymmetry in American Electoral Campaign Finance</em></li>
-    </ol>
+      <h3>Computing the Climate: How AI Infrastructure Shapes Public Support for Green Policy and AI Governance — <a href="https://connect.apsanet.org/centennialcenter/summer-centennial-center-research-grants/" target="_blank">Awarded APSA 2025 Centennial Center Research Grant</a></h3>
+      <h3>Uncertain Returns: Automation Risk and the Politics of Social Investment <small>(with Jiyeong Jeon)</small></h3>
+      <h3>European Competitiveness and Attitudes Towards EU Fiscal Integration <small>(with Lars van Doorn, Daniel Fernandes, and Olaf van Vliet)</small></h3>
+      <h3>Macroeconomic Contexts, Employment Prospects, and Support for Welfare Chauvinism <small>(with Lars van Doorn, Daniel Fernandes, and Olaf van Vliet)</small></h3>
+      <h3>Occupational Asymmetry in American Electoral Campaign Finance<small>(with Scott Patterson)</small></h3>
   </div>
 </section>
