--- a/research.html
+++ b/research.html
@@ -23,17 +23,9 @@ description: Research overview of Jaewook Lee
     margin-top: 3em;
     line-height: 1.6;
   }
+  /* Match header size with 'Working Papers' */
   .work-in-progress h2 {
-    font-size: 1.3em;
     margin-bottom: 1em;
-  }
-  .work-in-progress ol {
-    list-style-type: decimal;
-    margin-left: 1.5em;
-  }
-  .work-in-progress li {
-    margin-bottom: 0.8em;
-    font-size: 1em;
   }
   .work-in-progress a {
     text-decoration: none;
@@ -43,6 +35,7 @@ description: Research overview of Jaewook Lee
     text-decoration: underline;
   }
 </style>
+
 
 <section class="research-page">
   <div class="page-intro">
@@ -73,6 +66,9 @@ description: Research overview of Jaewook Lee
 
     <article class="paper">
       <h3>Saving His Job, Not Hers: Selective Protection in Automation-Driven Job Loss <small>(Soohyun Cho and Jaewook Lee)</small></h3>
+      <a href="https://sase.org/events/2025-montreal/" target="_blank">
+        - Awarded SASE 2025 Early Career Workshop
+      </a>
       <details>
         <summary>Abstract</summary>
         <p>
@@ -149,18 +145,22 @@ description: Research overview of Jaewook Lee
   <div class="work-in-progress">
     <h2>Work-in-Progress</h2>
 
-    <article class="paper">
-      <h3>
-        Computing the Climate: How AI Infrastructure Shapes Public Support for Green Policy and AI Governance —
-        <a href="https://connect.apsanet.org/centennialcenter/summer-centennial-center-research-grants/" target="_blank">
-          Awarded APSA 2025 Centennial Center Research Grant
-        </a>
-      </h3>
-      <p>
-        This project examines how the rapid growth of AI data centers—major consumers of electricity and water—reshapes public attitudes toward climate policy and AI regulation.
-        Combining regional data across Europe with original surveys, it identifies when citizens demand greener technologies or tighter governance over compute infrastructure.
-      </p>
-    </article>
+<article class="paper">
+  <h3>
+    Computing the Climate: How AI Infrastructure Shapes Public Support for Green Policy and AI Governance
+    <br>
+    <small>
+      <a href="https://connect.apsanet.org/centennialcenter/summer-centennial-center-research-grants/" target="_blank">
+        - Awarded APSA 2025 Centennial Center Research Grant
+      </a>
+    </small>
+  </h3>
+  <p>
+    This project examines how the rapid growth of AI data centers—major consumers of electricity and water—reshapes public attitudes toward climate policy and AI regulation.
+    Combining regional data across Europe with original surveys, it identifies when citizens demand greener technologies or tighter governance over compute infrastructure.
+  </p>
+</article>
+
 
     <article class="paper">
       <h3>Uncertain Returns: Automation Risk and the Politics of Social Investment <small>(with Jiyeong Jeon)</small></h3>
