--- a/research.html
+++ b/research.html
@@ -9,7 +9,7 @@ description: Research overview of Jaewook Lee
   /* ===== Page Intro Layout ===== */
   .page-intro {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-between;
     gap: 2.5em;
     margin-bottom: 2.5em;
@@ -21,8 +21,8 @@ description: Research overview of Jaewook Lee
   }
 
   .page-intro img {
-    flex: 1;
-    max-width: 260px; /* increased from 180px */
+    flex: 1.8;
+    max-width: 560px; /* increased from 180px */
     height: auto;
     border-radius: 8px;
     object-fit: cover;
