--- a/research.html
+++ b/research.html
@@ -22,7 +22,7 @@ description: Research overview of Jaewook Lee
 
   .page-intro img {
     flex: 1.5;
-    max-width: 90%; /* increased from 180px */
+    max-width: 450px; /* increased from 180px */
     height: auto;
     border-radius: 8px;
     object-fit: cover;
@@ -42,12 +42,14 @@ description: Research overview of Jaewook Lee
     }
 
     .image-container {
-      flex: 1.5;
-      text-align: center;
+      flex: 2;
+      display: flex;
+      flex-direction: column;
+      align-items: center; /* keep image + caption centered within the column */
     }
     
     .image-container img {
-      max-width: 550px;
+      max-width: 250px;
       height: auto;
       border-radius: 8px;
       object-fit: cover;
@@ -63,6 +65,11 @@ description: Research overview of Jaewook Lee
     }
 }
 
+    .image-caption details summary {
+      cursor: pointer;
+      list-style: none;
+    }
+    .image-caption details summary::-webkit-details-marker { display: none; }
   }
 
   /* ===== Section Titles ===== */
@@ -127,10 +134,14 @@ description: Research overview of Jaewook Lee
     <img src="/assets/images/etc/research_image-min.png"
          alt="Research illustration: Labor Migration, Automation, and Climate Change — AI Generated Image, Dutch Golden Age style">
     <p class="image-caption">
-      <em>AI-generated image</em> — Prompt: “A Dutch painting in the 17th style,  
-      showing economic challenges from labor migration (left), automation (center), and climate change (right), 
-      with people both worried and happy.”
-    </p>
+      <em>AI-generated image, </em> ChatGPT 5 <br>
+        <details>
+         <summary>— Prompt</summary>
+        "Draw a Dutch painting in the 17th-century style, <br>
+        showing people facing challenges from labor migration (left), <br>
+        automation (center), and climate change (right), <br>
+        people are both worried and happy.”
+        </details>
   </div>
 </div>
 
